# cloglog

./: .env.example  .gitignore  .mcp.json  AGENTS.md  AGENT_PROMPT.md  CLAUDE.md  CONTRACT.yaml  Makefile  README.md  alembic.ini  demo-script.sh  demo.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.cloglog/: config.yaml  on-worktree-create.sh  on-worktree-destroy.sh
.github/: pull_request_template.md
docs/: ddd-context-map.md  design.md  e2e-webhook-test.md  f48-manual-tests.md  invariants.md  review-engine-e2e.md  setup-credentials.md  worktree-test-report.md  zellij-guide.md
frontend/: Makefile  package-lock.json  package.json  vite.config.ts
mcp-server/: Makefile  package-lock.json  package.json  tsconfig.json
scripts/: check-contract.py  check-demo.sh  cleanup-wave.sh  close-wave.sh  create-worktree.sh  extract-openapi.py  generate-contract-types.sh  gh-app-token.py  list-worktrees.sh  manage-worktrees.sh  preflight.sh  reconcile.sh  remove-worktree.sh  rotate-project-key.py  run-demo.sh  sync_mcp_dist.py  test-demo-scripts.sh  test-worktree-scripts.sh  wait_for_agent_unregistered.py  worktree-infra.sh  worktree-ports.sh
shutdown-artifacts/: learnings.md  work-log.md
tests/: conftest.py  test_agent_lifecycle_pr_signals.py  test_agent_shutdown_hook.py  test_auto_merge_gate.py  test_check_contract.py  test_check_demo_allowlist.py  test_check_demo_exemption_hash.py  test_database_url_required.py  test_exit_on_unregister_hook.py  test_install_dev_hooks_guard.py  test_makefile_gunicorn_invocation.py  test_mcp_failure_rule_wording.py  (+8 more)
(+763 files in other folders)
